v1.4/markdown/asct-b/asct-b-vh-fallopian-tube.md
# Anatomical Structures, Cell Types, plus Biomarkers (ASCT+B) table for Fallopian Tube v1.1

### Description
[Anatomical Structures, Cell Types, plus Biomarkers (ASCT+B) tables](https://humanatlas.io/asctb-tables) aim to capture the nested *part_of* structure of anatomical human body parts, the typology of cells, and biomarkers used to identify cell types. The tables are authored and reviewed by an international team of experts.

| Label | Value |
| :------------- |:-------------|
| **Creator(s):** | Kathleen O'Neill; Stephen Fisher |
| **Creator ORCID(s):** | [0000-0003-1980-6840](https://orcid.org/0000-0003-1980-6840); [0000-0001-8034-7685](https://orcid.org/0000-0001-8034-7685) |
| **Project Lead:** | Katy B&ouml;rner |
| **Project Lead ORCID:** | [0000-0002-3321-6137](https://orcid.org/0000-0002-3321-6137) |
| **Reviewer(s):** | Ellen M. Quardokus 
| **Reviewers ORCID(s):** |[0000-0001-7655-4833](https://orcid.org/0000-0001-7655-4833)|
| **Creation Date:** | 2022-05-06 |
| **License:** | Creative Commons Attribution 4.0 International ([CC BY 4.0](https://creativecommons.org/licenses/by/4.0/)) |
| **Publisher:** | HuBMAP |
| **Funder:** | National Institutes of Health |
| **Award Number:** | OT2OD026671 |
| **HuBMAP ID:** | HBM522.SVHM.477 |
| **Data Table:** | [Fallopian Tube v1.1](https://hubmapconsortium.github.io/ccf-releases/v1.2/asct-b/ASCT-B_VH_Fallopian_Tube.csv) |
| **DOI:** | [https://doi.org/10.48539/HBM522.SVHM.477](https://doi.org/10.48539/HBM522.SVHM.477) |
| **How to Cite This Data Table:** | Kathleen O'Neill; Stephen Fisher. HuBMAP ASCT+B Tables. Fallopian Tube v1.1 [https://doi.org/10.48539/HBM522.SVHM.477](https://doi.org/10.48539/HBM522.SVHM.477) |
| **How to Cite ASCT+B Tables Overall:** | Quardokus, Ellen, Bruce W. Herr II, Lisel Record, Katy B&ouml;rner. 2022. [*HuBMAP ASCT+B Tables*](https://humanatlas.io/asctb-tables). Accessed on May 6, 2022. |
