v2.0/markdown/asct-b/asct-b-vh-fallopian-tube.md
# Anatomical Structures, Cell Types, plus Biomarkers (ASCT+B) table for Fallopian Tube v1.2

### Description
[Anatomical Structures, Cell Types, plus Biomarkers (ASCT+B) tables](https://humanatlas.io/asctb-tables) aim to capture the nested *part_of* structure of anatomical human body parts, the typology of cells, and biomarkers used to identify cell types. The tables are authored and reviewed by an international team of experts. 

Minor changes were made for v1.2 to ensure all cell types were mapped to Cell Ontology or had a parent cell type that mapped to Cell Ontology and genes and proteins were mapped to the Human Gene Ontology (HUGO) Gene Nomenclature Committee (HGNC). 

Future releases will add mappings to new anatomy terms which are being added to the Uberon multi-species anatomy ontology and new cell types from scRNAseq studies.

| Label | Value |
| :------------- |:-------------|
| **Creator(s):** | Kathleen O'Neill; Stephen Fisher |
| **Creator ORCID(s):** | [0000-0003-1980-6840](https://orcid.org/0000-0003-1980-6840); [0000-0001-8034-7685](https://orcid.org/0000-0001-8034-7685) |
| **Project Lead:** | Katy B&ouml;rner |
| **Project Lead ORCID:** | [0000-0002-3321-6137](https://orcid.org/0000-0002-3321-6137) |
| **Reviewer(s):** | Ellen M. Quardokus 
| **Reviewers ORCID(s):** |[0000-0001-7655-4833](https://orcid.org/0000-0001-7655-4833)|
| **Creation Date:** | 2023-12-15 |
| **License:** | Creative Commons Attribution 4.0 International ([CC BY 4.0](https://creativecommons.org/licenses/by/4.0/)) |
| **Publisher:** | HuBMAP |
| **Funder:** | National Institutes of Health |
| **Award Number:** | |
| **HuBMAP ID:** | HBM368.FBRW.337 |
| **Data Table:** | [Fallopian Tube v1.2](https://cdn.humanatlas.io/hra-releases/v2.0/asct-b/asct-b-fallopian-tube.csv) |
| **DOI:** | [https://doi.org/10.48539/HBM368.FBRW.337](https://doi.org/10.48539/HBM368.FBRW.337) |
| **How to Cite This Data Table:** | Kathleen O'Neill; Stephen Fisher. HuBMAP ASCT+B Tables. Fallopian Tube v1.2 [https://doi.org/10.48539/HBM368.FBRW.337](https://doi.org/10.48539/HBM368.FBRW.337) |
| **How to Cite ASCT+B Tables Overall:** | Quardokus, Ellen, Bruce W. Herr II, Lisel Record, Katy B&ouml;rner. 2023. [*HuBMAP ASCT+B Tables*](https://humanatlas.io/asctb-tables). Accessed on December 15, 2023. |
